# anyrun-fork

./: Cargo.toml  README.md  Readme.md  build.sh  run.sh  ~
anyrun/: Cargo.toml
anyrun-helper/: Cargo.toml
anyrun-helper/src/: icon.rs  lib.rs  log.rs  terminal.rs
anyrun-provider/: Cargo.toml
anyrun-provider/anyrun-provider-ipc/: Cargo.toml
anyrun-provider/anyrun-provider-ipc/src/: lib.rs
anyrun-provider/src/: main.rs
anyrun/src/: app.rs  config.rs  main.rs  plugin_box.rs
examples/: style.css
plugins/: Readme.md
plugins/anyrun-applications/: Cargo.toml  README.md
plugins/anyrun-applications/src/: lib.rs
plugins/anyrun-browser/: Cargo.toml
plugins/anyrun-browser/src/: lib.rs
plugins/anyrun-calc/: Cargo.toml  README.md
plugins/anyrun-calc/src/: lib.rs
plugins/anyrun-findfiles/: Cargo.toml  README.md
plugins/anyrun-findfiles/src/: lib.rs
plugins/anyrun-kde-setting/: Cargo.toml
plugins/anyrun-kde-setting/src/: lib.rs
plugins/anyrun-power/: Cargo.toml
plugins/anyrun-power/src/: lib.rs
plugins/anyrun-shell-wrapper/: Cargo.toml  README.md
plugins/anyrun-shell-wrapper/src/: lib.rs
plugins/anyrun-sync-manager/: Cargo.toml
plugins/anyrun-sync-manager/src/: lib.rs
plugins/anyrun-universal-action/: Cargo.toml  README.md
plugins/anyrun-universal-action/src/: actions.rs  category.rs  lib.rs  registry.rs  validate.rs
plugins/anyrun-universal-action/src/helper/: detect_and_save.rs  mod.rs
plugins/anyrun-websearch/: Cargo.toml  README.md
plugins/anyrun-websearch/src/: lib.rs
plugins/anyrun-zoxide/: Cargo.toml  README.md
plugins/anyrun-zoxide/src/: lib.rs
plugins/dictionary/src/: lib.rs
plugins/kde-active-window/: Cargo.toml
plugins/kde-active-window/src/: lib.rs
plugins/kde-clipboard/: Cargo.toml
plugins/kde-clipboard/src/: lib.rs
plugins/kill-port/: Cargo.toml
plugins/kill-port/src/: lib.rs
plugins/translate/src/: lib.rs
