[workspace]
members = [
    "anyrun",
    "anyrun-plugin",
    "anyrun-macros",
    "plugins/symbols",
    "plugins/rink",
    "plugins/shell",
    "plugins/kidex",
    "plugins/translate",
    "plugins/randr",
    "plugins/stdin",
    "plugins/dictionary",
    "plugins/websearch",
    "plugins/nix-run",
    "plugins/niri-focus",
    "plugins/anyrun-applications",
    "plugins/anyrun-calc",
    "plugins/anyrun-findfiles",
    "plugins/anyrun-shell-wrapper",
    "plugins/anyrun-universal-action",
    "plugins/anyrun-websearch",
    "plugins/anyrun-zoxide",
    "plugins/anyrun-kde-setting",
]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true 
