[workspace]
members = [
    "anyrun",
    "anyrun-plugin",
    "anyrun-macros",
    "plugins/symbols",
    "plugins/rink",
    "plugins/kidex",
    "plugins/translate",
    "plugins/randr",
    "plugins/stdin",
    "plugins/dictionary",
    "plugins/nix-run",
    "plugins/niri-focus",
    "plugins/anyrun-applications",
    "plugins/anyrun-calc",
    "plugins/anyrun-findfiles",
    "plugins/anyrun-shell-wrapper",
    "plugins/anyrun-universal-action",
    "plugins/anyrun-websearch",
    "plugins/anyrun-zoxide",
    "plugins/anyrun-kde-setting", 
    "anyrun-helper", "plugins/anyrun-browser", "plugins/anyrun-sync-manager", 
]
resolver = "2"

[workspace.dependencies]
anyrun-helper = { path = "./anyrun-helper" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true 
debug = true
