[workspace]
members = [
  "anyrun",
  "anyrun-plugin",
  "anyrun-macros",
  "plugins/symbols",
  "plugins/kidex",
  "plugins/translate",
  "plugins/randr",
  "plugins/stdin",
  "plugins/dictionary",
  "plugins/nix-run",
  "plugins/niri-focus",
  "plugins/anyrun-applications",
  "plugins/anyrun-calc",
  "plugins/anyrun-findfiles",
  "plugins/anyrun-shell-wrapper",
  "plugins/anyrun-universal-action",
  "plugins/anyrun-websearch",
  "plugins/anyrun-zoxide",
  "plugins/anyrun-kde-setting",
  "anyrun-helper",
  "plugins/anyrun-browser",
  "plugins/anyrun-sync-manager",
  "plugins/kde-clipboard",
  "plugins/kde-active-window",
  "plugins/kill-port",
]
resolver = "2"

[workspace.dependencies]
anyrun-helper = { path = "./anyrun-helper" }

[profile.release]
codegen-units = 1
debug         = true
lto           = "fat"
panic         = "abort"
strip         = true
