[package]
name    = "anyrun-applications"
version = "25.12.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyrun-plugin = { path = "../../anyrun-plugin" }
serde         = { features = [ "derive" ], version = "1.0.228" }
sublime_fuzzy = "0.7.0"
abi_stable = "0.11.1"
serde_json = "1.0.148"
ron = "0.12.0"
regex = "1.12.2"
chrono = "0.4.42"
fuzzy-matcher = "0.3.7"
