[package]
name = "anyrun-findfiles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] 

[dependencies]
anyrun-plugin = { path = "../../anyrun-plugin" }
abi_stable = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
regex = "1.12.2"
skim = "0.20.5"
walkdir = "2.5.0"
serde_json = "1.0.148"

