[package]
name = "anyrun-shell-wrapper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyrun-plugin = { path = "../../anyrun-plugin" }
abi_stable    = "0.11.1"
ron           = "0.12.0"
serde         = { features = [ "derive" ], version = "1.0.228" }
urlencoding   = "2.1.3"
chrono = "0.4.42"
fuzzy-matcher = "0.3.7"
