[package]
name = "anyrun-universal-action"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] 

[dependencies]
anyrun-plugin = { path = "../../anyrun-plugin" }
abi_stable = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
ron = "0.12.0"
regex = "1.12.2"
chrono = "0.4.42"
fuzzy-matcher = "0.3.7"
