[package]
name = "anyrun-universal-action"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] 

[dependencies]
anyrun-plugin = { path = "../../anyrun-plugin" }
anyrun-helper = { workspace = true }
abi_stable = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
ron = "0.12.0"
regex = "1.12.2"
chrono = "0.4.42"
fuzzy-matcher = "0.3.7"
serde_yaml = "0.9.34"
toml = "0.9.10"
once_cell = "1.21.3"
url = "2.5.8"
evalexpr = "13.1.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
heck = "0.5.0"
hex = "0.4.3"
