[package]
name    = "anyrun-universal-action"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
abi_stable    = "0.11.1"
anyrun-helper = { workspace = true }
anyrun-plugin = { path = "../../anyrun-plugin" }
chrono        = "0.4.42"
evalexpr      = "13.1.0"
fuzzy-matcher = "0.3.7"
once_cell     = "1.21.3"
regex         = "1.12.2"
ron           = "0.12.0"
serde         = { features = [ "derive" ], version = "1.0" }
serde_json    = "1.0.148"
url           = "2.5.8"
