[package]
name = "anyrun-websearch"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyrun-plugin = { path = "../../anyrun-plugin" }
abi_stable    = "0.11.1"
ron           = "0.8.0"
serde         = { features = [ "derive" ], version = "1.0.228" }
strum         = "0.25.0"
strum_macros  = "0.25.1"
urlencoding   = "2.1.3"
