[package]
name = "kill-port"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyrun-plugin = { path = "../../anyrun-plugin" }

anyrun-helper = { workspace = true }
abi_stable    = "0.11.1"
ron           = "0.12.0"
fuzzy-matcher = "0.3"
serde         = { features = [ "derive" ], version = "1.0.228" }
